fix: hide scrollbar for rooms list

--- a/style.css
+++ b/style.css
@@ -85,7 +85,16 @@
   left: 0;
   right: 0;
   overflow-y: auto;
+    scrollbar-width: none;
+  -ms-overflow-style: none;
 }
+
+#roomsList::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+
 
 #chat {
   text-align: right;
